package UnityEngine;

//:type = struct   //class, struct or interface
//:external
//:nopartials
message Vector2
{
	optional float x 		= 1 [default=0];
	optional float y 		= 2 [default=0];
}

//:type = struct   //class, struct or interface
//:external
//:nopartials
message Vector3
{
	optional float x 		= 1 [default=0];
	optional float y 		= 2 [default=0];
	optional float z 		= 3 [default=0];
}

//:type = struct   //class, struct or interface
//:external
//:nopartials
message Color
{
	optional float r 		= 1 [default=0];
	optional float g 		= 2 [default=0];
	optional float b 		= 3 [default=0];
	optional float a 		= 4 [default=0];
}

//:type = struct   //class, struct or interface
//:external
//:nopartials
message Quaternion 
{
	optional float x 		= 1 [default=0];
	optional float y 		= 2 [default=0];
	optional float z 		= 3 [default=0];
	optional float w 		= 4 [default=0];
}

//:type = struct   //class, struct or interface
//:external
//:nopartials
message Ray 
{
	//:references = false
	optional Vector3 origin = 1;
	//:references = false
	optional Vector3 direction = 2;
}
